Display13: Fault errors on pipe A when enabling non-linear formats
When starting Gnome+Wayland on ADL I'm getting:
kernel: xe 0000:00:02.0: [drm] *ERROR* Fault errors on pipe A: 0x00000080
Disabling non-linear formats fixes the startup of Gnome+Wayland, so there is probably a issue in DPT code for Xe KMD.
diff --git a/drivers/gpu/drm/i915/display/skl_universal_plane.c b/drivers/gpu/drm/i915/display/skl_universal_plane.c
index ae6bad4407ebc..41eeb3542f1b6 100644
--- a/drivers/gpu/drm/i915/display/skl_universal_plane.c
+++ b/drivers/gpu/drm/i915/display/skl_universal_plane.c
@@ -2083,6 +2083,9 @@ static bool gen12_plane_format_mod_supported(struct drm_plane *_plane,
if (!intel_fb_plane_supports_modifier(plane, modifier))
return false;
+ if (modifier != DRM_FORMAT_MOD_LINEAR)
+ return false;
+
switch (format) {
case DRM_FORMAT_XRGB8888:
case DRM_FORMAT_XBGR8888:
Edited by José Roberto de Souza